[package]
name = "spacebuild-server"
version = "0.1.0"
authors = ["Zolstoy <zolstoy.dev@gmail.com>"]
edition = "2021"

[lib]
name = "spacebuild"
doctest = false

[[bin]]
name = "server"
test = false
doctest = false
required-features = ["tracing"]

[[bin]]
name = "siege"
test = false
doctest = false

[[bin]]
name = "viewer"
test = false
doctest = false

[[test]]
name = "game"

[features]
default = ["tracing"]
tracing = ["dep:env_logger"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"]}
crossterm = { version = "0.29.0", features = ["event-stream"]}
futures = "0.3.31"
futures-time = "3.0.0"
http-body-util = "0.1.3"
hyper = {version = "1.7.0", features = ["server", "client", "http1"]}
hyper-rustls = {version = "0.27.7", features = ["native-tokio"]}
hyper-tungstenite = "0.19.0"
hyper-util = {version = "0.1.17", features = ["full"]}
is_printable = "0.1.1"
itertools = "0.14.0"
log = { version = "0.4.28"}
rand = "0.9.2"
rand_chacha = "0.9.0"
ratatui = "0.29.0"
regex = "1.12.2"
rstar = "0.12.2"
rustls = { version = "0.23.32"}
rustls-native-certs = { version = "0.8.2"}
rustls-pemfile = { version = "2.2.0"}
rustls-pki-types = { version = "1.12.0"}
scilib = "1.0.0"
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"]}
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"]}
tokio-rustls = { version = "0.26.4"}
tokio-stream = "0.1.17"
tokio-tungstenite = {version = "0.28.0", features = ["rustls"]}
uuid = {version = "1.18.1", features = ["v4","fast-rng","macro-diagnostics","serde"]}
webpki = { version = "0.22.4", features = ["alloc"]}
webpki-roots = { version = "1.0.3"}

env_logger = {version = "0.11.8", optional = true}
colored = "3.0.0"

[dev-dependencies]
test-helpers-async = "0.2.3"
